src/styles/FilmSubmission/OptionSelectCard.module.scss
.card {
  width: 36rem;
  height: 20rem;
  //outline: 1px solid rgb(216, 216, 216);
  //border-radius: 32px;
  display: inline-block;
  margin: 1rem;
}

.title {
  padding-left: 1.5rem;
  font-size: 1.5rem;
  font-weight: medium;
  color: #203569;
  margin-top: 1rem;
  margin-bottom: 1rem;
}

.inputContainer {
  padding-left: 1rem;
  display: inline-block;
  position: flex;

  &:hover {
    //background-color: #f5f5f5;
    border-radius: 5px;
    cursor: pointer;
  }

  input {
    position: relative;
    height: 2rem;
    width: 20rem;
    font-size: 1rem;
    font-weight: 500;
    border-radius: 1rem;
    margin: 0px;
    padding: 0px;
    padding-left: 1rem;
    padding-right: 1rem;
    //box-shadow: 0px 0px 6px 1px rgba(0, 0, 0, 0.15);
    appearance: none;
    //outline: none;
    outline: 1px solid rgb(216, 216, 216);
    border: none;
    background: #fff;
    transition: all 0.3s ease;

    &:focus {
      //box-shadow: 0px 0px 12px 2px rgba(0, 0, 0, 0.15);
      transform: scale(1.01);
      z-index: 2;
      ~ .dropdown {
        display: block;
      }
    }
  }

  .addButton {
    border-radius: 50%;
    background-color: #fff;
    height: 2rem;
    width: 2rem;
    position: relative;
    right: -0.5rem;
    border: none;
    outline: 1px solid rgb(216, 216, 216);
    font-weight: bold;
  }

  .none {
    display: none;
  }

  .dropdown {
    position: relative;
    top: -2rem;
    display: none;
    outline: 1px solid rgb(216, 216, 216);
    width: 20rem;
    background-color: rgba(255, 255, 255, 0.9);
    border-radius: 0 0 16px 16px;
    z-index: 1;
    overflow: hidden;
    overflow-y: auto;
    padding-top: 1rem;
    max-height: 300px;

    .dropdown-content {
      display: none;
      position: absolute;
      background-color: #f9f9f9;
      min-width: 160px;
      box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
      z-index: 1;
      border-radius: 5px;
      padding: 5px;
      margin-top: 5px;
    }

    &:focus {
      display: block;
    }

    &:hover {
      .dropdown-content {
        display: block;
      }
    }

    .item {
      display: block;
      border-bottom: rgba(0, 0, 0, 0.2) solid 1px;

      &:hover {
        cursor: pointer;
        background-color: #f5f5f5;
      }
    }

    :last-child {
      border-bottom: none;
    }
  }
}

.selectedOptionList {
  position: relative;
  top: 3rem;
  min-height: 1rem;

  .selectedOption {
    display: inline-block;
    margin-top: 1px;
    color: #555;
    padding: 5px;
    border-radius: 5px;
    border: 1px solid rgba(0, 0, 0, 0.05);

    &:hover {
      cursor: pointer;
      background-color: #f5f5f5;
      color: rgba(231, 50, 50, 0.8);
    }
  }
}

// .item {
//       position: relative;
//       display: inline-block;
//       padding: 0.5em;
//       margin: 0.5em;
//       border: 1px solid #ccc;
//       border-radius: 4px;
//       cursor: pointer;
//       background-color: #fff;
//       color: #000;
//       font-size: 1em;
//       font-weight: 400;
//       text-align: center;
//       text-decoration: none;
//       text-transform: uppercase;
//       transition: all 0.2s ease-in-out;
//       &:hover {
//         background-color: #eee;
//       }
//     }

